Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "['Croatia',\n",
        " 'USA',\n",
        " 'Argentina',\n",
-       " 'mexico',\n",
+       " 'Mexico',\n",
        " 'USA',\n",
        " 'Morocco',\n",
        " 'New Mexico',\n",
@@ -228,14 +228,14 @@
        " 'South Korea']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mexico = None\n",
-    "countries[3]= 'mexico'\n",
+    "countries[3]= 'Mexico'\n",
     "countries"
    ]
   },
@@ -248,16 +248,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['USA', 'Argentina', 'mexico']"
+       "['USA', 'Argentina', 'Mexico']"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
