--- a/index.ipynb
+++ b/index.ipynb
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        "['Croatia',\n",
        " 'USA',\n",
        " 'Argentina',\n",
-       " 'mexico',\n",
+       " 'Mexico',\n",
        " 'USA',\n",
        " 'Morocco',\n",
        " 'USA',\n",
@@ -395,7 +395,7 @@
        " 'Thailand']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
