--- a/index.ipynb
+++ b/index.ipynb
@@ -434,8 +434,7 @@
     " 'South Korea', \n",
     " 'Malta', \n",
     " 'Thailand']\n",
-    "countries.pop() # 'Thailand'\n",
-    "countries\n",
+    "countries.pop('Thailand') # 'Thailand'\n",
     "# ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'USA', 'Finland',  'Argentina', 'Italy', 'Canada', 'South Korea',  'Malta']"
    ]
   },
