Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -495,7 +495,8 @@
    ],
    "source": [
     "unique_countries = None\n",
-    "set(countries)"
+    "set(countries)\n",
+    "unique_countries="
    ]
   },
   {
