--- a/index.ipynb
+++ b/index.ipynb
@@ -519,13 +519,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "num_of_repeats = None\n",
-    "len()\n",
-    "num_of_repeats # 3"
+    "len(countries)"
    ]
   },
   {
