--- a/index.ipynb
+++ b/index.ipynb
@@ -535,7 +535,8 @@
    ],
    "source": [
     "num_of_repeats = None\n",
-    "len(countries)"
+    "len(countries)\n",
+    "len(unique_countrie)"
    ]
   },
   {
