--- a/index.ipynb
+++ b/index.ipynb
@@ -519,16 +519,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13"
+       "10"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,8 @@
    "source": [
     "num_of_repeats = None\n",
     "len(countries)\n",
-    "len(unique_countrie)"
+    "len(unique_countries)\n",
+    "len(countries)"
    ]
   },
   {
