--- a/index.ipynb
+++ b/index.ipynb
@@ -537,7 +537,7 @@
     "num_of_repeats = None\n",
     "len(countries)\n",
     "len(unique_countries)\n",
-    "len(countries)"
+    "len(countries)-len(unique_countries)"
    ]
   },
   {
